--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.satyan:sugar:1.5'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.yahoo.mobile.client.android.util.rangeseekbar:rangeseekbar-library:0.1.0'
+    compile 'com.googlecode.mp4parser:isoparser:1.1.21'
     testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:design:26.+'
