--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.satyan:sugar:1.5'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.yahoo.mobile.client.android.util.rangeseekbar:rangeseekbar-library:0.1.0'
-    compile 'com.googlecode.mp4parser:isoparser:1.1.21'
-    testCompile 'junit:junit:4.12'
-
+    compile 'com.googlecode.mp4parser:isoparser:1.0-RC-2'
     compile 'com.android.support:design:26.+'
+    compile 'com.android.support:support-v4:26.+'
+    testCompile 'junit:junit:4.12'
 }
